app3/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-dep
  namespace: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: findarkside/app3:6ac4605f860daee7f9d65678
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3541
