app3/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  namespace: main-app
spec:
  type: NodePort
  selector:
    app: app3
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
